# Base32

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  base32.cabal  decode-output.html  default.nix  output.html
.github/workflows/: haskell-ci.yml
benchmarks/: Base32Bench.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: base32-0.2.2.0-inplace.conf  package.cache
src/Data/ByteString/: Base32.hs
src/Data/ByteString/Base32/: Hex.hs  Internal.hs
src/Data/ByteString/Base32/Internal/: Head.hs  Loop.hs  Tables.hs  Tail.hs  Utils.hs
src/Data/ByteString/Lazy/: Base32.hs
src/Data/ByteString/Lazy/Base32/: Hex.hs
src/Data/ByteString/Short/: Base32.hs
src/Data/ByteString/Short/Base32/: Hex.hs
src/Data/Text/Encoding/: Base32.hs
src/Data/Text/Encoding/Base32/: Error.hs  Hex.hs
src/Data/Text/Lazy/Encoding/: Base32.hs
src/Data/Text/Lazy/Encoding/Base32/: Hex.hs
src/Data/Text/Short/Encoding/: Base32.hs
src/Data/Text/Short/Encoding/Base32/: Hex.hs
test/: Base32Tests.hs  Internal.hs  Main.hs
